# pydantic-mas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/pydantic_mas/: __init__.py  _agent_node.py  _budget.py  _config.py  _formatter.py  _hooks.py  _instance.py  _mas.py  _message.py  _result.py  _router.py
tests/: conftest.py  test_agent_naming.py  test_agent_node.py  test_budget.py  test_e2e.py  test_e2e_reply_chain.py  test_e2e_shared_state.py  test_exceptions.py  test_external_tool.py  test_factory.py  test_formatter.py  test_hooks.py  test_instance.py  test_interrupt.py  test_mas.py  test_message.py  test_metadata.py  test_pending_request_chain.py  test_reply_protocol.py  test_result.py  test_router.py  test_smoke.py  test_tool_sequential.py  test_tracing.py
