[project]
name = "pydantic-mas"
version = "0.1.0"
description = "Multi-agent system framework built on pydantic-ai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_mas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
